syntax = "proto3";

package message;

option java_package = "nl.tudelft.cs4160.trustchain_android.message";
option java_outer_classname = "MessageProto";

message Message {
    TrustChainBlock halfBlock = 1;
    CrawlRequest crawlRequest= 2;
}

message TrustChainBlock {
    bytes public_key = 1;
    int32 sequence_number = 2;
    bytes link_public_key = 3;
    int32 link_sequence_number = 4;
    bytes previous_hash = 5;
    bytes signature = 6;
    bytes transaction = 7;
}

message CrawlRequest {
    bytes public_key = 1;
    int32 requested_sequence_number = 2;
    int32 limit = 3;
}